--- a/.github/workflows/monitor.yml
+++ b/.github/workflows/monitor.yml
@@ -34,6 +34,6 @@ jobs:
       run: |
         git config --global user.name 'github-actions'
         git config --global user.email 'github-actions@github.com'
-        git add old_content.txt change_log.txt
-        git push https://github-actions:${{ secrets.ACTIONS_TOKEN }}@github.com/${{ github.repository }}.git
-        git push
+        git commit old_content.txt change_log.txt -m 'change'
+        git push -f https://github-actions:${{ secrets.ACTIONS_TOKEN }}@github.com/${{ github.repository }}.git
+        git push -f
