--- a/.github/workflows/monitor.yml
+++ b/.github/workflows/monitor.yml
@@ -35,6 +35,6 @@ jobs:
         git config --global user.name 'github-actions'
         git config --global user.email 'github-actions@github.com'
         git add .
-        git commit old_content.txt change_log.txt -m 'change'
+        git commit -m "Add all new files"
         git push -f https://github-actions:${{ secrets.ACTIONS_TOKEN }}@github.com/${{ github.repository }}.git
         git push -f
