--- a/.github/workflows/monitor.yml
+++ b/.github/workflows/monitor.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install requests
+        pip install requests beautifulsoup4
 
     - name: Run monitor script
       run: python m.py
