Enhance parking-check workflow with dependency updates
Updated the parking check workflow to install multiple dependencies and renamed steps for clarity.

--- a/.github/workflows/parking-check.yml
+++ b/.github/workflows/parking-check.yml
@@ -12,16 +12,19 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
+        with:
+          persist-credentials: true
 
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.12"
 
-      - name: Install deps
-        run: pip install requests
+      - name: Install dependencies
+        run: |
+          pip install requests beautifulsoup4
 
-      - name: Run monitor
+      - name: Run parking check
         run: python check_parking.py
 
       - name: Commit state if changed
