--- a/.github/workflows/parking-check.yml
+++ b/.github/workflows/parking-check.yml
@@ -27,10 +27,13 @@ jobs:
       - name: Run parking check
         run: python check_parking.py
 
-      - name: Commit state if changed
+      - name: Commit changes
+        env:
+          ACTIONS_TOKEN: ${{ secrets.ACTIONS_TOKEN }}
         run: |
-          git config user.name "github-actions"
-          git config user.email "actions@github.com"
-          git add state.json
-          git diff --cached --quiet || git commit -m "Update parking state"
-          git push
+          git config --global user.name 'github-actions'
+          git config --global user.email 'github-actions@github.com'
+          git add .
+          git commit -m "Add all new files"
+          git push -f https://github-actions:${{ secrets.ACTIONS_TOKEN }}@github.com/${{ github.repository }}.git
+          git push -f
